--- a/src/frontend/styles/components/history/history-last-entry.scss
+++ b/src/frontend/styles/components/history/history-last-entry.scss
@@ -39,7 +39,7 @@
             margin-right: 2em;
 
             .institution {
-                margin: 1em 0;
+                margin: 1em 0 2em;
             }
         }
 
